added configuration to surefire file

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M3</version>
                 <configuration>
+                    <skipTests>false</skipTests>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <forkMode>once</forkMode>
                     <suiteXmlFiles>
                         <suiteXmlFile>TestNGDocker.xml</suiteXmlFile>
                     </suiteXmlFiles>
